--- a/style.css
+++ b/style.css
@@ -77,3 +77,20 @@ h2{
     padding: 20px 20px;
     margin-left: 5%;
 }
+
+/*footer part css*/
+.footerDesign{
+    background-color: #272521;
+    text-align: center;
+    height: 250px;
+}
+.footerDesign h2{
+    padding-top: 20px;
+    color: gray;
+    font-weight: 500;
+    text-transform: uppercase;
+}
+.footerDesign p{
+    color: #fff;
+    padding-top: 30px;
+}
