--- a/style.css
+++ b/style.css
@@ -8,8 +8,76 @@ h1{
 h2{
     font-size: 40px;
 }
+a{
+    text-decoration: none;
+}
+ul li{
+    list-style-type: none;
+}
 .base-color{
     color: #ffbc0d;
+}
+
+/*menu part css*/
+
+.nav-items{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #746e6e;
+    box-shadow: 2px 2px 12px grey;
+}
+.logo{
+    font-size: 40px;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: #fff;
+    margin-left: 20px;
+    
+}
+.logo-p2{
+    font-size: 20px;
+    font-family: ;
+}
+.nav-items ul li{
+    display: inline-block;
+}
+.nav-items ul li a{
+    color: #fff;
+    margin: 5px;
+    padding: 0 5px;
+    height: 30px;
+    line-height: 43px;
+    text-align: center;
+    font-weight: 500;
+    display: flex;
+    font-size: 1rem;
+    letter-spacing: 1px;
+}
+/* .nav-items .search{
+    margin-right:150px;
+} */
+.menu-bar{
+    border-bottom: 4px solid red;
+    border-width: medium;
+}
+.menu-btn{
+    background-image: linear-gradient(#ffbc0d, orange);
+    padding: 10px 35px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-weight: 500;
+    color: black;
+}
+
+/*banner part css*/
+
+.banner{
+    margin-top:70px ;
 }
 .divDesign{
     display: flex;
@@ -30,7 +98,7 @@ h2{
 
 }
 .fn-btn{
-    background-color: #ffbc0d;
+    background-image: linear-gradient(#ffbc0d, orange);
     padding: 15px 45px;
     border-radius: 5px;
     text-decoration: none;
@@ -44,12 +112,16 @@ h2{
     background-size: cover;
     background-repeat: no-repeat;
 }
+.aboutUs .banner-item {
+    
+}
 .aboutUs .banner-item h2{
     color: grey;
+    padding-top:90px;
 }
 .aboutUs .banner-item p{
     margin-bottom: 100px;
-    padding-right: 20%;
+    padding-right: 30%;
 }
 .banner-item .aboutImg{
     width: 50%;
