--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ ul li{
     height: 30px;
     line-height: 43px;
     text-align: center;
-    font-weight: 500;
+    font-weight: 400;
     display: flex;
     font-size: 1rem;
     letter-spacing: 1px;
@@ -81,7 +81,7 @@ ul li{
 /*banner part css*/
 
 .banner{
-    margin-top:70px ;
+    margin-top:100px ;
 }
 .divDesign{
     display: flex;
@@ -112,7 +112,7 @@ ul li{
 
 /*about me css*/
 .aboutUs{
-    background-image: url(images/shapes/7.png);
+    background-image: url(images/shapes/cover-food1-.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -122,8 +122,9 @@ ul li{
     padding-top:90px;
 }
 .aboutUs .banner-item p{
-    margin-bottom: 100px;
+    margin-bottom: 80px;
     padding-right: 30%;
+    color: honeydew;
 }
 .banner-item .aboutImg{
     width: 50%;
@@ -153,23 +154,20 @@ ul li{
     font-family: 'Spartan', sans-serif;
     text-align: justify;
 }
-
-/*footer part css*/
-.footerDesign{
-    background-color: #272521;
-    text-align: center;
-    height: 250px;
+.recipe-item p{
+    margin-bottom: 30px;
 }
-.footerDesign h2{
-    padding-top: 20px;
-    color: gray;
+.recipe-btn{
+    background-image: linear-gradient(#ffbc0d, orange);
+    padding: 10px 30px;
+    border-radius: 5px;
+    text-decoration: none;
     font-weight: 500;
-    text-transform: uppercase;
+    color: black;
+    
 }
-.footerDesign p{
-    color: #fff;
-    padding-top: 30px;
-}
+
+
 
 /*deals part css*/
 
@@ -197,4 +195,41 @@ ul li{
 .min-text{
     font-size: 12px;
     margin-top: 60px;
+}
+
+/*contact part css*/
+.contactDetails{
+    display: flex;
+}
+.contact-items{
+    width: 20%;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+.contact-items ul li a{
+    color: grey;
+    
+
+}
+
+
+
+/*footer part css*/
+.footerDesign{
+    background-color: #272521;
+    text-align: center;
+    height: 250px;
+}
+.footerDesign h2{
+    padding-top: 20px;
+    color: gray;
+    font-weight: 500;
+    text-transform: uppercase;
+}
+.footerDesign h3{
+    font-weight: 400;
+}
+.footerDesign p{
+    color: #fff;
+    padding-top: 30px;
 }
