media section added

--- a/style.css
+++ b/style.css
@@ -149,21 +149,24 @@ ul li{
     box-shadow: 2px 2px 15px gray;
     border-radius: 30px;
     width: 23%;
-    padding: 20px 20px;
+    padding: 22px 20px;
     margin-left: 5%;
     font-family: 'Spartan', sans-serif;
     text-align: justify;
+    align-items: center;
 }
 .recipe-item p{
     margin-bottom: 30px;
 }
 .recipe-btn{
     background-image: linear-gradient(#ffbc0d, orange);
-    padding: 10px 30px;
+    padding: 10px 25px;
     border-radius: 5px;
     text-decoration: none;
     font-weight: 500;
     color: black;
+    margin-left: 70px;
+    
     
 }
 
@@ -195,6 +198,25 @@ ul li{
 .min-text{
     font-size: 12px;
     margin-top: 60px;
+}
+
+/*media part css*/
+.media-items{
+    display: flex;
+    margin-bottom: 80px;
+    box-shadow: 2px 2px 12px grey;
+    width: 80%;
+    margin-left: 10%;
+    border-radius: 10px;
+}
+.media-content{
+    width: 23%;
+    margin-left: 8%;
+    margin-right: 5%;
+
+}
+.media-content h4{
+    font-weight: 400;
 }
 
 /*contact part css*/
